# Nova

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  notes.txt  run.sh
Nova-App/: CMakeLists.txt
Nova-App/Resources/Editor/Shaders/: Grid.frag.slang  Grid.vert.slang
Nova-App/include/App/: AppLayer.h  CubeLinesLayer.h  EditorLayer.h  GameLayer.h  SceneLayer.h  SeascapeLayer.h  SingularityLayer.h  SpiralGalaxyLayer.h
Nova-App/include/Layer/: AppLayer.h
Nova-App/include/UI/Panels/: AssetBrowserPanel.h  HierarchyPanel.h  InspectorPanel.h  MainMenuBar.h  ViewportPanel.h
Nova-App/shaders/OpenGL/cubeLines/: cubeLines.frag
Nova-App/shaders/OpenGL/scene/: scene.frag  scene.vert
Nova-App/shaders/OpenGL/seascape/: seascape.frag  seascape.vert
Nova-App/shaders/OpenGL/singularity/: singularity.frag
Nova-App/shaders/OpenGL/spiralGalaxy/: spiralGalaxy.frag
Nova-App/src/: main.cpp
Nova-App/src/App/: AppLayer.cpp  AppLayer.cpp.txt  AppLayer.h  CubeLinesLayer.cpp  EditorLayer.cpp  EditorLayer.h  GameLayer.cpp  GameLayer.h  SceneLayer.cpp  SeascapeLayer.cpp  SingularityLayer.cpp  SpiralGalaxyLayer.cpp  VkLayer.cpp  VkLayer.h
Nova-App/src/Layer/: AppLayer.cpp
Nova-App/src/UI/Panels/: AssetBrowserPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  MainMenuBar.cpp  ScenePanel.cpp  ScenePanel.cpp.txt  ScenePanel.h  ViewportPanel.cpp
assets/shaders/: fragment.frag  outline.frag  outline.vert  shadowDepth.vert  standard.frag  vertex.vert
include/Components/: CameraComponent.hpp  LightComponent.hpp  MeshComponent.hpp  MeshRendererComponent.hpp  TagComponent.hpp  TransformComponent.hpp
include/Core/: Application.hpp  Window.hpp
include/GUI/: EditorUI.hpp
include/GUI/Panels/: AssetBrowserPanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  MainMenuBar.hpp  ViewportPanel.hpp
include/Input/: InputAction.hpp  InputManager.hpp
include/Math/: AABB.hpp  Ray.hpp
include/Renderer/: Renderer.hpp
include/Renderer/OpenGL/: GLMeshBuffers.hpp  GL_Caches.hpp  GL_MeshBuffers.hpp  GL_RenderPass.hpp  GL_RenderPassCtx.hpp  GL_Renderer.hpp  GL_Shader.hpp  OpenGLRenderer.hpp  RenderPass.hpp  Shader.hpp
include/Renderer/OpenGL/Graphics/: Camera.hpp  Sphere.hpp
include/Renderer/OpenGL/Passes/: GL_GeometryPass.hpp  GL_OutlinePass.hpp  GL_ShadowPass.hpp  GeometryPass.hpp  OutlinePass.hpp  ShadowPass.hpp
include/Scene/: Scene.hpp
include/Scene/Node/: Camera.hpp  CameraNode.hpp  CubeNode.hpp  Light.hpp  LightNode.hpp  Node.hpp  Plane.hpp  Sphere.hpp  SphereNode.hpp
shaders/glsl/: debugAABB.frag  debugAABB.vert  depthPrePass.frag  depthPrePass.vert  gBufferPass.frag  gBufferPass.vert  lightCullingPass.comp  shadowDepth.frag
src/: main.cpp
src/Core/: Application.cpp  Window.cpp
src/GUI/: EditorUI.cpp
src/GUI/Panels/: AssetBrowserPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  MainMenuBar.cpp  ViewportPanel.cpp
src/Renderer/: Renderer.cpp
src/Renderer/OpenGL/: GL_Renderer.cpp  GL_Shader.cpp  OpenGLRenderer.cpp  Shader.cpp
src/Renderer/OpenGL/Graphics/: Camera.cpp  Sphere.cpp
src/Renderer/OpenGL/Passes/: GL_DebugAABBPass.cpp  GL_DepthPrePass.cpp  GL_GBufferPass.cpp  GL_GeometryPass.cpp  GL_LightCullingPass.cpp  GL_OutlinePass.cpp  GL_ShadowPass.cpp  GeometryPass.cpp  OutlinePass.cpp  ShadowPass.cpp
src/Scene/: Scene.cpp
src/Scene/Node/: Node.cpp
